# devhands

./: .gitignore
homework_03/: README.md
homework_04/: README.md
homework_04/raw/: 2024_04_06_11_41_00-http___localhost-c512.txt  2024_04_06_12_29_41-http___localhost_python_fastapi_static-c64.txt  2024_04_07_10_01_55-http___localhost_8082_static-c256.txt  2024_04_07_12_40_52-http___localhost_python_fastapi_payload_cpu_msec_50-c16.txt  2024_04_07_13_08_04-http___localhost_go_vanilla_payload_cpu_msec_50-c16.txt  runner.py  wrk_parser.py
homework_05/: README.md
homework_05/raw/: 2024_04_07_16_18_14-http___localhost_8082_cache_count_5-c128.txt  2024_04_07_17_29_42-http___localhost_8082_db_count_5-c128.txt  2024_04_07_18_11_59-http___localhost_8082_cache_count_5-c128.txt  2024_04_07_20_11_53-http___localhost_8082_db_count_1-c128.txt  2024_04_07_20_39_25-http___localhost_8082_cache_count_1-c256.txt
src/go_vanilla/: Makefile  go.mod  go.sum
src/go_vanilla/cmd/go_vanilla/: main.go
src/go_vanilla/handlers/: handlers.go  ok.go  query.go  sleep.go  static.go
src/go_vanilla/payload/: dummy.go  getrusage.go  io.go  mysql.go  payload.go  redis.go
src/python_fastapi/: pyproject.toml
src/python_fastapi/python_fastapi/: main.py
src/python_fastapi/python_fastapi/routers/: __init__.py  payload.py  static.py
