[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "python_fastapi" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
SQLAlchemy = "^2.0.27"
uvicorn = "^0.27.1"
prometheus-fastapi-instrumentator = "^7.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
